memory efficient refactor